--- a/template.html
+++ b/template.html
@@ -5,6 +5,125 @@
     <title></title>
   </head>
   <body>
+		
+	<table style="width:80%">
+	<tr><th>Шрифт</th><th>Пример (зависит от установленных шрифтов)</th></tr>
+	<tr><td><a href="/w/index.php?title=Antiqua_(typeface_class)&amp;action=edit&amp;redlink=1" class="new" title="Antiqua (typeface class) (страница отсутствует)">Antiqua</a></td>
+<td><span style="font-family: Antiqua, serif;"><a href="/wiki/The_quick_brown_fox_jumps_over_the_lazy_dog" title="The quick brown fox jumps over the lazy dog">The quick brown fox jumps over the lazy dog</a>. 0123456789</span>
+</td></tr>
+<tr>
+<td>Arial
+</td>
+<td><span style="font-family: Arial, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
+</td></tr>
+<tr>
+<td>Avqest
+</td>
+<td><span style="font-family: avqest, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
+</td></tr>
+<tr>
+<td><a href="/w/index.php?title=Blackletter&amp;action=edit&amp;redlink=1" class="new" title="Blackletter (страница отсутствует)">Blackletter</a>
+</td>
+<td><span style="font-family: Blackletter, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
+</td></tr>
+<tr>
+<td><a href="/wiki/Calibri" title="Calibri">Calibri</a>
+</td>
+<td><span style="font-family: calibri, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
+</td></tr>
+<tr>
+<td><a href="/wiki/Comic_Sans" title="Comic Sans">Comic Sans</a>
+</td>
+<td><span style="font-family: &#39;Comic Sans MS&#39;, &#39;comic sans ms&#39;, &#39;comic sans&#39;, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
+</td></tr>
+<tr>
+<td><a href="/w/index.php?title=Courier_(font)&amp;action=edit&amp;redlink=1" class="new" title="Courier (font) (страница отсутствует)">Courier</a>
+</td>
+<td><span style="font-family: courier, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
+</td></tr>
+<tr>
+<td>Decorative
+</td>
+<td><span style="font-family: Decorative, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
+</td></tr>
+<tr>
+<td><a href="/w/index.php?title=Fraktur_(typeface)&amp;action=edit&amp;redlink=1" class="new" title="Fraktur (typeface) (страница отсутствует)">Fraktur</a>
+</td>
+<td><span style="font-family: Fraktur, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
+</td></tr>
+<tr>
+<td>Frosty
+</td>
+<td><span style="font-family: frosty, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
+</td></tr>
+<tr>
+<td><a href="/wiki/Garamond" class="mw-redirect" title="Garamond">Garamond</a>
+</td>
+<td><span style="font-family: Garamond, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
+</td></tr>
+<tr>
+<td><a href="/w/index.php?title=Georgia_(typeface)&amp;action=edit&amp;redlink=1" class="new" title="Georgia (typeface) (страница отсутствует)">Georgia</a>
+</td>
+<td><span style="font-family: georgia, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
+</td></tr>
+<tr>
+<td><a href="/wiki/Helvetica" class="mw-redirect" title="Helvetica">Helvetica</a>
+</td>
+<td><span style="font-family: Helvetica, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
+</td></tr>
+<tr>
+<td>Impact
+</td>
+<td><span style="font-family: Impact, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
+</td></tr>
+<tr>
+<td>Minion
+</td>
+<td><span style="font-family: Minion, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
+</td></tr>
+<tr>
+<td>Modern
+</td>
+<td><span style="font-family: Modern, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
+</td></tr>
+<tr>
+<td>Monospace
+</td>
+<td><span style="font-family: monospace, monospace;">The quick brown fox jumps over the lazy dog. 0123456789</span>
+</td></tr>
+<tr>
+<td><a href="/wiki/Palatino" title="Palatino">Palatino</a>
+</td>
+<td><span style="font-family: Palatino, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
+</td></tr>
+<tr>
+<td>Roman
+</td>
+<td><span style="font-family: Roman, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
+</td></tr>
+<tr>
+<td>Script
+</td>
+<td><span style="font-family: Script, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
+</td></tr>
+<tr>
+<td>Swiss
+</td>
+<td><span style="font-family: Swiss, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
+</td></tr>
+<tr>
+<td><a href="/wiki/Times_New_Roman" class="mw-redirect" title="Times New Roman">Times New Roman</a>
+</td>
+<td><span style="font-family: &#39;Times New Roman&#39;, times, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
+</td></tr>
+<tr>
+<td><a href="/wiki/Verdana" class="mw-redirect" title="Verdana">Verdana</a>
+</td>
+<td><span style="font-family: verdana, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
+</td></tr></tbody></table>
+	
+		<hr>
+	
 		<b><u>Заголовки:</u></b>
 		<h1>H1</h1>
 		<h2>H2</h2>
