--- a/template.html
+++ b/template.html
@@ -2,26 +2,17 @@
 <html>
   <head>
     <meta  content="text/html; charset=UTF-8"  http-equiv="content-type">
-    <title></title>
+    <title>Page Template</title>
   </head>
   <body>
-		
+	
+	<font size="4">
 	<table style="width:80%">
 	<tr><th>Шрифт</th><th>Пример (зависит от установленных шрифтов)</th></tr>
-	<tr><td><a href="/w/index.php?title=Antiqua_(typeface_class)&amp;action=edit&amp;redlink=1" class="new" title="Antiqua (typeface class) (страница отсутствует)">Antiqua</a></td>
-<td><span style="font-family: Antiqua, serif;"><a href="/wiki/The_quick_brown_fox_jumps_over_the_lazy_dog" title="The quick brown fox jumps over the lazy dog">The quick brown fox jumps over the lazy dog</a>. 0123456789</span>
-</td></tr>
-<tr>
-<td>Arial
-</td>
-<td><span style="font-family: Arial, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
-</td></tr>
-<tr>
-<td>Avqest
-</td>
-<td><span style="font-family: avqest, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
-</td></tr>
-<tr>
+	<tr><td>Antiqua</td><td><span style="font-family: Antiqua;">ABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^&*()_+abcdefghijklmnopqrstuvwxyz[]{};':",./?АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ1234567890абвгдеёжзийклмнопрстуфхцчшщъыьэюя</span></td></tr>
+	<tr><td>Arial</td><td><span style="font-family: Arial;">1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^&*()_+abcdefghijklmnopqrstuvwxyz[]{};':",./?АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ</span></td></tr>
+	<tr><td>Avqest</td><td><span style="font-family: avqest">1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^&*()_+abcdefghijklmnopqrstuvwxyz[]{};':",./?АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ</span></td></tr>
+	<tr>
 <td><a href="/w/index.php?title=Blackletter&amp;action=edit&amp;redlink=1" class="new" title="Blackletter (страница отсутствует)">Blackletter</a>
 </td>
 <td><span style="font-family: Blackletter, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
@@ -121,6 +112,7 @@
 </td>
 <td><span style="font-family: verdana, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
 </td></tr></tbody></table>
+</font>
 	
 		<hr>
 	
