--- a/template.html
+++ b/template.html
@@ -6,12 +6,19 @@
   </head>
   <body>
 	
-	<font size="5">
+	<font size="">
 	<table style="width:80%">
 	<tr><th>Шрифт</th><th>Пример (зависит от установленных шрифтов)</th></tr>
 	<tr><td>Antiqua</td><td><span style="font-family: Antiqua;">ABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^&*()_+abcdefghijklmnopqrstuvwxyz[]{};':",./?АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ1234567890абвгдеёжзийклмнопрстуфхцчшщъыьэюя</span></td></tr>
 	<tr><td>Arial</td><td><span style="font-family: Arial;">ABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^&*()_+abcdefghijklmnopqrstuvwxyz[]{};':",./?АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ1234567890абвгдеёжзийклмнопрстуфхцчшщъыьэюя</span></td></tr>
 	<tr><td>Avqest</td><td><span style="font-family: avqest">ABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^&*()_+abcdefghijklmnopqrstuvwxyz[]{};':",./?АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ1234567890абвгдеёжзийклмнопрстуфхцчшщъыьэюя</span></td></tr>
+	
+	
+	
+	
+	
+	
+	
 	<tr>
 <td><a href="/w/index.php?title=Blackletter&amp;action=edit&amp;redlink=1" class="new" title="Blackletter (страница отсутствует)">Blackletter</a>
 </td>
