--- a/template.html
+++ b/template.html
@@ -6,120 +6,32 @@
   </head>
   <body>
 	
-	<font size="">
-	<table style="width:80%">
-	<tr><th>Шрифт</th><th>Пример (зависит от установленных шрифтов)</th></tr>
-	<tr><td>Antiqua</td><td><span style="font-family: Antiqua;">ABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^&*()_+abcdefghijklmnopqrstuvwxyz[]{};':",./?АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ1234567890абвгдеёжзийклмнопрстуфхцчшщъыьэюя</span></td></tr>
-	<tr><td>Arial</td><td><span style="font-family: Arial;">ABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^&*()_+abcdefghijklmnopqrstuvwxyz[]{};':",./?АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ1234567890абвгдеёжзийклмнопрстуфхцчшщъыьэюя</span></td></tr>
-	<tr><td>Avqest</td><td><span style="font-family: avqest">ABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^&*()_+abcdefghijklmnopqrstuvwxyz[]{};':",./?АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ1234567890абвгдеёжзийклмнопрстуфхцчшщъыьэюя</span></td></tr>
-	
-	
-	
-	
-	
-	
-	
-	<tr>
-<td><a href="/w/index.php?title=Blackletter&amp;action=edit&amp;redlink=1" class="new" title="Blackletter (страница отсутствует)">Blackletter</a>
-</td>
-<td><span style="font-family: Blackletter, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
-</td></tr>
-<tr>
-<td><a href="/wiki/Calibri" title="Calibri">Calibri</a>
-</td>
-<td><span style="font-family: calibri, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
-</td></tr>
-<tr>
-<td><a href="/wiki/Comic_Sans" title="Comic Sans">Comic Sans</a>
-</td>
-<td><span style="font-family: &#39;Comic Sans MS&#39;, &#39;comic sans ms&#39;, &#39;comic sans&#39;, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
-</td></tr>
-<tr>
-<td><a href="/w/index.php?title=Courier_(font)&amp;action=edit&amp;redlink=1" class="new" title="Courier (font) (страница отсутствует)">Courier</a>
-</td>
-<td><span style="font-family: courier, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
-</td></tr>
-<tr>
-<td>Decorative
-</td>
-<td><span style="font-family: Decorative, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
-</td></tr>
-<tr>
-<td><a href="/w/index.php?title=Fraktur_(typeface)&amp;action=edit&amp;redlink=1" class="new" title="Fraktur (typeface) (страница отсутствует)">Fraktur</a>
-</td>
-<td><span style="font-family: Fraktur, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
-</td></tr>
-<tr>
-<td>Frosty
-</td>
-<td><span style="font-family: frosty, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
-</td></tr>
-<tr>
-<td><a href="/wiki/Garamond" class="mw-redirect" title="Garamond">Garamond</a>
-</td>
-<td><span style="font-family: Garamond, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
-</td></tr>
-<tr>
-<td><a href="/w/index.php?title=Georgia_(typeface)&amp;action=edit&amp;redlink=1" class="new" title="Georgia (typeface) (страница отсутствует)">Georgia</a>
-</td>
-<td><span style="font-family: georgia, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
-</td></tr>
-<tr>
-<td><a href="/wiki/Helvetica" class="mw-redirect" title="Helvetica">Helvetica</a>
-</td>
-<td><span style="font-family: Helvetica, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
-</td></tr>
-<tr>
-<td>Impact
-</td>
-<td><span style="font-family: Impact, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
-</td></tr>
-<tr>
-<td>Minion
-</td>
-<td><span style="font-family: Minion, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
-</td></tr>
-<tr>
-<td>Modern
-</td>
-<td><span style="font-family: Modern, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
-</td></tr>
-<tr>
-<td>Monospace
-</td>
-<td><span style="font-family: monospace, monospace;">The quick brown fox jumps over the lazy dog. 0123456789</span>
-</td></tr>
-<tr>
-<td><a href="/wiki/Palatino" title="Palatino">Palatino</a>
-</td>
-<td><span style="font-family: Palatino, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
-</td></tr>
-<tr>
-<td>Roman
-</td>
-<td><span style="font-family: Roman, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
-</td></tr>
-<tr>
-<td>Script
-</td>
-<td><span style="font-family: Script, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
-</td></tr>
-<tr>
-<td>Swiss
-</td>
-<td><span style="font-family: Swiss, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
-</td></tr>
-<tr>
-<td><a href="/wiki/Times_New_Roman" class="mw-redirect" title="Times New Roman">Times New Roman</a>
-</td>
-<td><span style="font-family: &#39;Times New Roman&#39;, times, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
-</td></tr>
-<tr>
-<td><a href="/wiki/Verdana" class="mw-redirect" title="Verdana">Verdana</a>
-</td>
-<td><span style="font-family: verdana, serif;">The quick brown fox jumps over the lazy dog. 0123456789</span>
-</td></tr></tbody></table>
-</font>
+	<font size="5"><table style="width:80%">
+		<tr><th>Шрифт</th><th>Пример (зависит от установленных шрифтов)</th></tr>
+		<tr><td>Antiqua</td><td><span style="font-family: Antiqua;">ABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^&*()_+abcdefghijklmnopqrstuvwxyz[]{};':",./?АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ1234567890абвгдеёжзийклмнопрстуфхцчшщъыьэюя</span></td></tr>
+		<tr><td>Arial</td><td><span style="font-family: Arial;">ABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^&*()_+abcdefghijklmnopqrstuvwxyz[]{};':",./?АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ1234567890абвгдеёжзийклмнопрстуфхцчшщъыьэюя</span></td></tr>
+		<tr><td>Avqest</td><td><span style="font-family: avqest;">ABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^&*()_+abcdefghijklmnopqrstuvwxyz[]{};':",./?АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ1234567890абвгдеёжзийклмнопрстуфхцчшщъыьэюя</span></td></tr>
+		<tr><td>Blackletter</td><td><span style="font-family: Blackletter;">ABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^&*()_+abcdefghijklmnopqrstuvwxyz[]{};':",./?АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ1234567890абвгдеёжзийклмнопрстуфхцчшщъыьэюя</span></td></tr>
+		<tr><td>Calibri</td><td><span style="font-family: Calibri;">ABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^&*()_+abcdefghijklmnopqrstuvwxyz[]{};':",./?АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ1234567890абвгдеёжзийклмнопрстуфхцчшщъыьэюя</span></td></tr>
+		<tr><td>Comic Sans</td><td><span style="font-family: Comic Sans;">ABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^&*()_+abcdefghijklmnopqrstuvwxyz[]{};':",./?АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ1234567890абвгдеёжзийклмнопрстуфхцчшщъыьэюя</span></td></tr>
+		<tr><td>Courier</td><td><span style="font-family: Courier;">ABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^&*()_+abcdefghijklmnopqrstuvwxyz[]{};':",./?АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ1234567890абвгдеёжзийклмнопрстуфхцчшщъыьэюя</span></td></tr>
+		<tr><td>Decorative</td><td><span style="font-family: Decorative;">ABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^&*()_+abcdefghijklmnopqrstuvwxyz[]{};':",./?АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ1234567890абвгдеёжзийклмнопрстуфхцчшщъыьэюя</span></td></tr>
+		<tr><td>Fraktur</td><td><span style="font-family: Fraktur;">ABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^&*()_+abcdefghijklmnopqrstuvwxyz[]{};':",./?АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ1234567890абвгдеёжзийклмнопрстуфхцчшщъыьэюя</span></td></tr>
+		<tr><td>Frosty</td><td><span style="font-family: Frosty;">ABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^&*()_+abcdefghijklmnopqrstuvwxyz[]{};':",./?АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ1234567890абвгдеёжзийклмнопрстуфхцчшщъыьэюя</span></td></tr>
+		<tr><td>Garamond</td><td><span style="font-family: Garamond;">ABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^&*()_+abcdefghijklmnopqrstuvwxyz[]{};':",./?АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ1234567890абвгдеёжзийклмнопрстуфхцчшщъыьэюя</span></td></tr>
+		<tr><td>Georgia</td><td><span style="font-family: Georgia;">ABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^&*()_+abcdefghijklmnopqrstuvwxyz[]{};':",./?АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ1234567890абвгдеёжзийклмнопрстуфхцчшщъыьэюя</span></td></tr>
+		<tr><td>Helvetica</td><td><span style="font-family: Helvetica;">ABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^&*()_+abcdefghijklmnopqrstuvwxyz[]{};':",./?АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ1234567890абвгдеёжзийклмнопрстуфхцчшщъыьэюя</span></td></tr>
+		<tr><td>Impact</td><td><span style="font-family: Impact;">ABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^&*()_+abcdefghijklmnopqrstuvwxyz[]{};':",./?АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ1234567890абвгдеёжзийклмнопрстуфхцчшщъыьэюя</span></td></tr>
+		<tr><td>Minion</td><td><span style="font-family: Minion;">ABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^&*()_+abcdefghijklmnopqrstuvwxyz[]{};':",./?АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ1234567890абвгдеёжзийклмнопрстуфхцчшщъыьэюя</span></td></tr>
+		<tr><td>Modern</td><td><span style="font-family: Modern;">ABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^&*()_+abcdefghijklmnopqrstuvwxyz[]{};':",./?АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ1234567890абвгдеёжзийклмнопрстуфхцчшщъыьэюя</span></td></tr>
+		<tr><td>Monospace</td><td><span style="font-family: Monospace;">ABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^&*()_+abcdefghijklmnopqrstuvwxyz[]{};':",./?АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ1234567890абвгдеёжзийклмнопрстуфхцчшщъыьэюя</span></td></tr>
+		<tr><td>Palatino</td><td><span style="font-family: Palatino;">ABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^&*()_+abcdefghijklmnopqrstuvwxyz[]{};':",./?АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ1234567890абвгдеёжзийклмнопрстуфхцчшщъыьэюя</span></td></tr>
+		<tr><td>Roman</td><td><span style="font-family: Roman;">ABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^&*()_+abcdefghijklmnopqrstuvwxyz[]{};':",./?АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ1234567890абвгдеёжзийклмнопрстуфхцчшщъыьэюя</span></td></tr>
+		<tr><td>Script</td><td><span style="font-family: Script;">ABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^&*()_+abcdefghijklmnopqrstuvwxyz[]{};':",./?АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ1234567890абвгдеёжзийклмнопрстуфхцчшщъыьэюя</span></td></tr>
+		<tr><td>Swiss</td><td><span style="font-family: Swiss;">ABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^&*()_+abcdefghijklmnopqrstuvwxyz[]{};':",./?АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ1234567890абвгдеёжзийклмнопрстуфхцчшщъыьэюя</span></td></tr>
+		<tr><td>Times New Roman</td><td><span style="font-family: Times New Roman;">ABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^&*()_+abcdefghijklmnopqrstuvwxyz[]{};':",./?АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ1234567890абвгдеёжзийклмнопрстуфхцчшщъыьэюя</span></td></tr>
+		<tr><td>Verdana</td><td><span style="font-family: Verdana;">ABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^&*()_+abcdefghijklmnopqrstuvwxyz[]{};':",./?АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ1234567890абвгдеёжзийклмнопрстуфхцчшщъыьэюя</span></td></tr>
+	</table></font>
 	
 		<hr>
 	
