--- a/template.html
+++ b/template.html
@@ -6,7 +6,7 @@
   </head>
   <body>
 	
-	<font size="5"><table style="width:80%">
+	<font size="5"><table style="width:80%" border="1">
 		<tr><th>Шрифт</th><th>Пример (зависит от установленных шрифтов)</th></tr>
 		<tr><td>Antiqua</td><td><span style="font-family: Antiqua;">ABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^&*()_+abcdefghijklmnopqrstuvwxyz[]{};':",./?АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ1234567890абвгдеёжзийклмнопрстуфхцчшщъыьэюя</span></td></tr>
 		<tr><td>Arial</td><td><span style="font-family: Arial;">ABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^&*()_+abcdefghijklmnopqrstuvwxyz[]{};':",./?АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ1234567890абвгдеёжзийклмнопрстуфхцчшщъыьэюя</span></td></tr>
