--- a/template.html
+++ b/template.html
@@ -6,7 +6,7 @@
   </head>
   <body>
 	
-	<font size="5"><table style="width:80%" border="1">
+	<font size="5"><table style="width:80%" border="1" cellspacing="1" cellpadding="1">
 		<tr><th>Шрифт</th><th>Пример (зависит от установленных шрифтов)</th></tr>
 		<tr><td>Antiqua</td><td><span style="font-family: Antiqua;">ABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^&*()_+abcdefghijklmnopqrstuvwxyz[]{};':",./?АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ1234567890абвгдеёжзийклмнопрстуфхцчшщъыьэюя</span></td></tr>
 		<tr><td>Arial</td><td><span style="font-family: Arial;">ABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^&*()_+abcdefghijklmnopqrstuvwxyz[]{};':",./?АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ1234567890абвгдеёжзийклмнопрстуфхцчшщъыьэюя</span></td></tr>
@@ -55,7 +55,7 @@
 		<hr>
 
 		<b><u>Теги форматирования:</u></b>
-		<table boder="0" width="50%">
+		<table boder="1" width="50%"  cellspacing="1" cellpadding="1">
 			<tr><th>p</th><th><p>абзац</p></th></tr>
 			<tr><th>div</th><th><div>раздел (align=left|right|center)</div></th></tr>
 			<tr><th>br</th><th>разрыв строки</th></tr>
