--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Under construction!
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta  content="text/html; charset=UTF-8"  http-equiv="content-type">
+		<title>[shamanrshu.github.io :: Заглавная страница] (С) 1983-2020 Каверин Александр Сергеевич</title>
+	</head>
+	<body>
+
+		
+
+	</body>
+</html>
