--- a/index.html
+++ b/index.html
@@ -6,7 +6,23 @@
 	</head>
 	<body>
 
+<! --------------->
+<! -- Заголовок -->
+<! --------------->
+
+		<table style="width:90%" border="0" cellspacing="5" cellpadding="5">
+			<tr><td>[Начало]</td><td>[Об авторе]</td><td>[Ссылки]</td></tr>
+		</table>
+
+<! ---------->
+<! -- Тело -->
+<! ---------->
+
 		
+
+<! ------------>
+<! -- Подвал -->
+<! ------------>
 
 	</body>
 </html>
