--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta  content="text/html; charset=UTF-8"  http-equiv="content-type">
-		<title>[shamanrshu.github.io :: Заглавная страница] (С) 1983-2020 Каверин Александр Сергеевич</title>
+		<title>[shamanrshu.github.io :: Начало] (С) 1983-2020 Каверин Александр Сергеевич</title>
 	</head>
 	<body>
 
@@ -11,7 +11,10 @@
 <! --------------->
 
 		<table style="width:90%" border="0" cellspacing="5" cellpadding="5">
-			<tr><td>[Начало]</td><td>[Об авторе]</td><td>[Ссылки]</td></tr>
+			<tr>
+				<td><a href="https://shamanrshu.github.io/index.html">[Начало]</a></td>
+				<td><a href="https://shamanrshu.github.io/about.html">[Обо мне]</a></td>
+				<td><a href="https://shamanrshu.github.io/links.html">[Ссылки]</a></td>
 		</table>
 
 <! ---------->
