--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 <! -- Заголовок -->
 <! --------------->
 
-		<table style="width:90%" border="0" cellspacing="5" cellpadding="5">
-			<tr>
-				<td><a href="https://shamanrshu.github.io/index.html">[Начало]</a></td>
-				<td><a href="https://shamanrshu.github.io/about.html">[Обо мне]</a></td>
-				<td><a href="https://shamanrshu.github.io/links.html">[Ссылки]</a></td>
-		</table>
+		<center>
+			<table style="width:90%" border="0" cellspacing="5" cellpadding="5">
+				<tr>
+					<td><a href="https://shamanrshu.github.io/index.html">[Начало]</a></td>
+					<td><a href="https://shamanrshu.github.io/about.html">[Обо мне]</a></td>
+					<td><a href="https://shamanrshu.github.io/links.html">[Ссылки]</a></td>
+			</table>
+		</center>
 
 <! ---------->
 <! -- Тело -->
