--- a/index.html
+++ b/index.html
@@ -1,35 +1,37 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta  content="text/html; charset=UTF-8"  http-equiv="content-type">
-		<title>[shamanrshu.github.io :: Начало] (С) 1983-2020 Каверин Александр Сергеевич</title>
-	</head>
-	<body>
+## Welcome to GitHub Pages
 
-<! --------------->
-<! -- Заголовок -->
-<! --------------->
+You can use the [editor on GitHub](https://github.com/shamanrshu/shamanrshu.github.io/edit/master/README.md) to maintain and preview the content for your website in Markdown files.
 
-		<center>
-			<table style="width:100%" border="0" cellspacing="5" cellpadding="5">
-				<tr>
-					<td><a href="https://shamanrshu.github.io/index.html">[Начало]</a></td>
-					<td><a href="https://shamanrshu.github.io/about.html">[Обо мне]</a></td>
-					<td><a href="https://shamanrshu.github.io/links.html">[Ссылки]</a></td>
-			</table>
-		</center>
+Whenever you commit to this repository, GitHub Pages will run [Jekyll](https://jekyllrb.com/) to rebuild the pages in your site, from the content in your Markdown files.
 
-<! ---------->
-<! -- Тело -->
-<! ---------->
+### Markdown
 
-		
+Markdown is a lightweight and easy-to-use syntax for styling your writing. It includes conventions for
 
-<! ------------>
-<! -- Подвал -->
-<! ------------>
+```markdown
+Syntax highlighted code block
 
-		(C) 1998-2020 Каверин Александр Сергеевич
+# Header 1
+## Header 2
+### Header 3
 
-	</body>
-</html>
+- Bulleted
+- List
+
+1. Numbered
+2. List
+
+**Bold** and _Italic_ and `Code` text
+
+[Link](url) and ![Image](src)
+```
+
+For more details see [GitHub Flavored Markdown](https://guides.github.com/features/mastering-markdown/).
+
+### Jekyll Themes
+
+Your Pages site will use the layout and styles from the Jekyll theme you have selected in your [repository settings](https://github.com/shamanrshu/shamanrshu.github.io/settings). The name of this theme is saved in the Jekyll `_config.yml` configuration file.
+
+### Support or Contact
+
+Having trouble with Pages? Check out our [documentation](https://docs.github.com/categories/github-pages-basics/) or [contact support](https://github.com/contact) and we’ll help you sort it out.
